--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,13 @@
   <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.c-art-web.de/sign/xmlrpc.php?rsd" />
   <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://www.c-art-web.de/sign/wp-includes/wlwmanifest.xml" />
   <link rel='shortlink' href='http://www.c-art-web.de/sign/?p=30' />
+  <script src="{{ "/jquery-2.1.3.min.js" | prepend: site.baseurl }}"></script>
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-55823927-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 </head>
