fixed ‘sign/‘ problem

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
               Copyright &copy; 2009 - C-Art Webdesign - Steffen Hauth & Tobias Bielohlawek GdbR <br>
               Humboldtstr. 2, 55286 W&ouml;rrstadt<br><br>
               Ausgewählte Bilder werden bereitgestellt von: <a href="http://pixelquelle.de" target="_blank">pixelquelle.de</a>
-              <p>C-Art Webdesign is proudly powered by <a href="http://http://jekyllrb.co/">Jekyll</a><br /></p>
+              <p>C-Art Webdesign is proudly powered by <a href="http://http://jekyllrb.com">Jekyll</a><br /></p>
             </footer>
           </td>
         </tr>
